sample/error/e01108.asn
E01108 DEFINITIONS ::=
BEGIN
    num INTEGER ::= 09 -- E01108
END
